--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+    background: theme("colors.dark");
+    color: theme("colors.white");
+    min-height: theme("height.screen");
+    font-family: 'Poppins', consolas, sans-serif;
+}
